<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:title="@string/color">
        <menu >
            <!-- 定义一组单选菜单项 -->

                <!-- 定义子菜单 -->
                <item android:id="@+id/red" android:title="@string/color_red"/>
                <item android:id="@+id/green" android:title="@string/color_green"/>
                <item android:id="@+id/blue" android:title="@string/color_blue"/>
                <item android:id="@+id/gray" android:title="@string/color_gray"/>
                <item android:id="@+id/yellow" android:title="@string/color_yellow"/>

        </menu>
    </item>
    <item android:title="@string/width">
        <menu >
            <!-- 定义子菜单 -->
            <group>
                <item android:id="@+id/width_1" android:title="@string/width_1"/>
                <item android:id="@+id/width_2" android:title="@string/width_2"/>
                <item android:id="@+id/width_3" android:title="@string/width_3"/>
                <item android:id="@+id/width_4" android:title="@string/width_4"/>
                <item android:id="@+id/width_5" android:title="@string/width_5"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/clear" android:title="@string/clear"/>
    <item android:id="@+id/save" android:title="@string/save"/>
    <item android:id="@+id/palymusic" android:title="@string/palyMusic"/>
    <item android:id="@+id/pausemusic" android:title="@string/pauseMusic"/>
</menu>